<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aufthesis.encryption.DecryptFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="top">

        <TextView
            android:id="@+id/cipher_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_border"
            android:padding="10dp"
            android:gravity="top"
            android:textColorHint="#D3D3D3"
            android:hint="@string/hint_ciphertext"/>

        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/paste_decrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_content_paste_black_24dp"
                android:background="#00000000"
                android:text="@string/paste"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/clear_decrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_delete_forever_black_24dp"
                android:background="#00000000"
                android:text="@string/clear"/>

        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            />

    </LinearLayout>
</FrameLayout>